Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.6.2
-
None
Description
https://codereview.qt-project.org/#/c/168797/
/Users/qt/work/qt/qtdeclarative/tests/auto/qml/qqmlextensionplugin/target_wrapper.sh ./tst_qqmlextensionplugin iidCheck ********* Start testing of tst_qqmlextensionplugin ********* Config: Using QtTest library 5.6.2, Qt 5.6.2 (x86_64-little_endian-lp64 shared (dynamic) release build; by Clang 7.0.2 (clang-700.1.81) (Apple)) PASS : tst_qqmlextensionplugin::initTestCase() PASS : tst_qqmlextensionplugin::iidCheck(libqmlfolderlistmodelplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libqmlfolderlistmodelplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libqmlsettingsplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libqmlsettingsplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libmodelsplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libmodelsplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libqtqmlstatemachine) FAIL! : tst_qqmlextensionplugin::iidCheck(libqtqmlstatemachine) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libqmllocalstorageplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libqmllocalstorageplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libparticlesplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libparticlesplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libwindowplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libwindowplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libqmlxmllistmodelplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libqmlxmllistmodelplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libqtquick2plugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libqtquick2plugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::iidCheck(libqmltestplugin) FAIL! : tst_qqmlextensionplugin::iidCheck(libqmltestplugin) 'loader.load()' returned FALSE. () Loc: [tst_qqmlextensionplugin.cpp(108)] PASS : tst_qqmlextensionplugin::cleanupTestCase() Totals: 12 passed, 10 failed, 0 skipped, 0 blacklisted ********* Finished testing of tst_qqmlextensionplugin ********* QQml_removeValueTypeProvider: was asked to remove provider 0x10662f4c0 but it was not found QQml_removeValueTypeProvider: was asked to remove provider 0x10662f4c0 but it was not found make: *** [check] Error 10